Fixed text alignment

--- a/src/Components/Time.css
+++ b/src/Components/Time.css
@@ -8,7 +8,7 @@
 }
 
 .timeText {
-  transform: translateX(75%) translateY(-50%);
+  transform: translateX(77%) translateY(-50%);
   font-size: 50px;
   text-align: center;
 }
